# FirstGame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
src/Engine/: CMakeLists.txt
src/Engine/include/GS_ENGINE/: Define.h  EventManager.h  EventSystem.h  Input.h  Logger.h  Window.h  WindowNativeHandle.h
src/Engine/include/GS_ENGINE/Renderer/: Renderer.h  VulkanHandle.h
src/Engine/src/GS_ENGINE/: EventManager.c  Window.c  WindowNativeHandle.c
src/Engine/src/GS_ENGINE/Renderer/: Renderer.c
src/Engine/src/GS_ENGINE/Renderer/Vulkan/: VulkanHandle.c
src/Engine/src/GS_ENGINE/platform/linux/: LinuxLogger.c  LinuxWindow.c  LinuxWindowNativeHandle.c
src/Engine/src/GS_ENGINE/platform/win32/: WindowsLogger.c  WindowsWindow.c  WindowsWindowNativeHandle.c
src/Engine/src/Window/: Window.c
src/Game/: CMakeLists.txt
src/Game/src/: Entry.c
